# Unit-Testing-in-C-3-LAB-msp-

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  delete.sh
scpRecieverDir/: lab
src/: valgrind.txt
src/samples/: lab1aotN3246  lab1aotN3246.c
testSrc/: plugin_api.h  test  test.c
